# rules_prusik

./: BUILD.bazel  README.md  WORKSPACE  k8s_helper.bzl  stamper_template_transform.py
